[package]
name = "sockdrive"
version = "0.1.0"
authors = ["Alexander Guryanov <caiiiycuk@gmail.com>"]
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
byteorder = "1.4.3"
ctrlc = "3.4.0"
